prevent header from wrapping; additional fallback fonts

--- a/stylesheets/screen.scss
+++ b/stylesheets/screen.scss
@@ -883,6 +883,8 @@ body div.gadget {
     border-bottom: 1px solid $palette_white_50trans;
   }
   .navbar-fixed-top .nav {
+    white-space: nowrap;
+    overflow: hidden;
     margin-top: 1.6em;
     li {
       padding: 0 5px;
